--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>MeshCore</title>
+    <title>MeshCore Test Client</title>
 
     <style>
         [v-cloak] {
@@ -24,7 +24,7 @@
     <!-- header -->
     <div class="flex border bg-gray-50 p-3 rounded shadow">
         <div class="my-auto">
-            <div class="font-bold">MeshCore Client</div>
+            <div class="font-bold">MeshCore Test Client</div>
             <div class="text-sm">Developed by <a target="_blank" href="https://liamcottle.com" class="text-blue-500 hover:underline">Liam Cottle</a></div>
         </div>
     </div>
