--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                             </div>
                         </div>
                         <div class="flex my-auto space-x-2">
-                            <div @click="sendMessage(contact)" class="hover:underline cursor-pointer">Message</div>
-                            <div @click="showCommandLine(contact)" class="hover:underline cursor-pointer">CLI</div>
+                            <div v-if="contact.type === 1" @click="sendMessage(contact)" class="hover:underline cursor-pointer">Message</div>
+                            <div v-if="contact.type === 2" @click="showCommandLine(contact)" class="hover:underline cursor-pointer">CLI</div>
+                            <div v-if="contact.type === 2" @click="statusRequest(contact)" class="hover:underline cursor-pointer">GetStats</div>
                             <div @click="setPath(contact)" class="hover:underline cursor-pointer">Set Path</div>
-                            <div @click="statusRequest(contact)" class="hover:underline cursor-pointer">GetStats</div>
                             <div @click="shareContact(contact)" class="hover:underline cursor-pointer">Share (Zero Hop)</div>
                             <div @click="exportContact(contact)" class="hover:underline cursor-pointer">Export</div>
                             <div @click="resetPath(contact)" class="hover:underline cursor-pointer">Reset Path</div>
@@ -153,6 +153,7 @@
                         <div class="font-semibold my-auto mr-auto">{{ cliContact.advName }}</div>
                         <div class="flex my-auto space-x-2">
                             <div @click="login(cliContact)" class="hover:underline cursor-pointer">Login</div>
+                            <div @click="cliMessages = []" class="hover:underline cursor-pointer">Clear</div>
                             <div @click="cliContact = null" class="hover:underline cursor-pointer">Close</div>
                         </div>
                     </div>
