--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                 <button @click="importPrivateKey" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
                     ImportPrivateKey
                 </button>
+                <button @click="getChannels" class="border border-gray-500 px-2 bg-gray-100 hover:bg-gray-200 rounded">
+                    GetChannels
+                </button>
             </div>
         </div>
 
@@ -524,6 +527,14 @@
                     alert(`Battery Voltage: ${response.batteryMilliVolts}mV`);
                 } catch(e) {
                     alert("Failed to get battery voltage!");
+                }
+            },
+            async getChannels() {
+                try {
+                    const response = await this.connection.getChannels();
+                    console.log(response);
+                } catch(e) {
+                    alert("Failed to get channels!");
                 }
             },
             async login(contact) {
